--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>React push</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima doloremque molestiae at, recusandae perspiciatis neque vero in consequuntur error illo possimus sapiente id, perferendis deleniti optio rerum iusto. Eos, id?</p>
     
 </body>
 </html>
